--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,7 +11,7 @@
   <meta property="og:image" content="{% if page.title %}{% else %}{{"/images/avatar.jpeg" | prepend: site.baseurl}}{% endif %}">
 
   {% capture blogtitle %}{{page.title}}{%endcapture%}
-  <title>{% if page.title %}{{ page.title }}{% else %}Главная | {{ site.title }}{% endif %}</title>
+  <title>SOHEE의 개발 블로그</title>
   
   <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
