--- a/_includes/index-footer.html
+++ b/_includes/index-footer.html
@@ -6,12 +6,12 @@
     /></a>
     <header>
       <h2>SOHEE's Blog</h2>
-      <p>By <a href="{{site.author.cv}}">{{site.author.name}}</a></p>
+      <p>By {{site.author.name}}</p>
     </header>
   </section>
   <section class="blurb">
-    <h2>О сайте</h2>
-    <p>{{ site.description }}</p>
+    <!-- <h2>О сайте</h2>
+    <p>{{ site.description }}</p> -->
     <ul class="actions">
       <li>
         <a
@@ -25,7 +25,7 @@
 
   <!-- Footer -->
   <section id="footer">
-    <ul class="icons">
+    <!-- <ul class="icons">
       <li>
         <a href="mailto:{{site.author.email}}" class="fa-envelope"
           ><span class="label">Email</span></a
@@ -57,7 +57,7 @@
           ><span class="label">Telegram</span></a
         >
       </li>
-    </ul>
+    </ul> -->
     <p class="copyright">
       &copy; Kapitonenko. Design: <a href="http://html5up.net">HTML5 UP</a>.
       Work on <a href="https://jekyllrb.com">Jekyll</a>.
