--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,7 @@ layout: default
   <header> 
     <div class="title">
       <h2>{{ page.title | escape }}</h2>
-      <p><a href="//github.com/ViKapitoshka/blog/edit/master/{{ page.path }}" class="icon"><i class="fas fa-fw fa-edit"></i> Редактировать на GitHub</a></p>
+      <p><a href="https://github.com/shkim00216/shkim00216.github.io" class="icon"><i class="fas fa-fw fa-edit"></i> Github로 이동</a></p>
     </div>
     <div class="meta">
       <time class="published" datetime="{{ page.date }}">{{ page.date | date: "%d %b %Y %R" }}</time>
@@ -14,11 +14,11 @@ layout: default
   </header>
   {{ content }}
   
-  <p>Подписывайтесь на наш <a href="http://t.me/vikablog">канал</a> в телеграмме :)
+  <p>감사합니다 :)
   <footer>
     <ul class="stats">
-      <li><a class="icon" href="{{ site.url }}"><i class="fas fa-fw fa-folder"></i> Главная</a></li>
-      <li><a href="//github.com/ViKapitoshka/blog/edit/master/{{ page.path }}" class="icon"><i class="fas fa-fw fa-edit"></i> Edit</a></li>
+      <li><a class="icon" href="{{ site.url }}"><i class="fas fa-fw fa-folder"></i> 목록</a></li>
+      <li><a href="https://github.com/shkim00216/shkim00216.github.io" class="icon"><i class="fas fa-fw fa-edit"></i> Edit</a></li>
     </ul>
   </footer>
   
@@ -26,10 +26,10 @@ layout: default
 </article>
 <ul class="actions pagination">
   {% if page.previous.url %}
-    <li><a href="{{page.previous.url}}" class="button big previous icon"><i class="fw fas fa-chevron-left"></i> Туда</a></li>
+    <li><a href="{{page.previous.url}}" class="button big previous icon"><i class="fw fas fa-chevron-left"></i> 이전</a></li>
   {% endif %}
   {% if page.next.url %}
-    <li><a href="{{page.next.url}}" class="button big next icon">Сюда <i class="fw fas fa-chevron-right"></i></a></li>
+    <li><a href="{{page.next.url}}" class="button big next icon">Сюда <i class="fw fas fa-chevron-right"></i> 다음</a></li>
   {% endif %}
 </ul>
 
