--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -29,7 +29,7 @@ layout: default
     <li><a href="{{page.previous.url}}" class="button big previous icon"><i class="fw fas fa-chevron-left"></i> 이전</a></li>
   {% endif %}
   {% if page.next.url %}
-    <li><a href="{{page.next.url}}" class="button big next icon">Сюда <i class="fw fas fa-chevron-right"></i> 다음</a></li>
+    <li><a href="{{page.next.url}}" class="button big next icon">다음 <i class="fw fas fa-chevron-right"></i> </a></li>
   {% endif %}
 </ul>
 
