--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,7 +14,7 @@ layout: default
   </header>
   {{ content }}
   
-  <p>감사합니다 :)
+  <p>감사합니다 :)</p>
   <footer>
     <ul class="stats">
       <li><a class="icon" href="{{ site.url }}"><i class="fas fa-fw fa-folder"></i> 목록</a></li>
