--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -1,7 +1,8 @@
 @import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.8/dist/web/variable/pretendardvariable.css");
 
 /* TYPOGRAPHY */
-$font-family-main: "Source Sans Pro", Helvetica, Arial, sans-serif;
+$font-family-main: "Pretendard Variable", "Source Sans Pro", Helvetica, Arial,
+  sans-serif;
 $font-family-headings: "Pretendard Variable", "Source Sans Pro", Helvetica,
   Arial, sans-serif;
 $font-family-logo: "Pretendard Variable", "Source Sans Pro", Helvetica, Arial,
